	Fixed bug where older IE versions wouldn't properly handle some elements if they where placed at the top of editor contents.
	Fixed bug where selecting the whole table would enable table tools for cells and rows.
	Fixed bug where it wasn't possible to replace selected contents on IE when pasting using the paste plugin.
	Fixed bug where setting text color in fullpage plugin doesn't work.
Version 3.4 (2011-03-10)
	Added accessibility example with various accessibility options contributed by Ephox.
	Fixed bug where attributes wasn't properly handled in the xhtmlxtras plugin.
	Fixed bug where the image.htm had some strange td artifacts probably due to auto merging.
	Fixed bug where the ToolbarGroup had an missing reference to this in it's destroy method.
	Fixed bug with the resizeBy function in the advanced theme where it was scaled by the wrong parent.
	Fixed bug where an exception would be thrown by the element if the page was served in xhtml mode.
	Fixed bug where mceInsertContent would throw an exception when page was served in xhtml mode.
	Fixed bug where you couldn't select a forground/background color when page was served in xhtml mode.
	Fixed bug where the editor would scroll to the toolbar when clicked due to a call to focus in ListBox.
	Fixed bug where pages with rtl dir wouldn't render split buttons correctly when using the o2k7 theme.
	Fixed bug where anchor elements with names wasn't properly collapsed as they where in 3.3.x.
	Fixed bug where WebKit wouldn't properly handle image selection if it was done left to right.
	Fixed bug where the formatter would align images when the selection range was collapsed.
	Fixed bug where the image button would be active when the selection range was collapsed.
	Fixed bug where the element_format option wasn't used by the new (X)HTML serializer logic.
	Fixed bug where the table cell/row dialogs would produce empty attributes.
	Fixed bug where the tfoot wouldn't be added to the top of the table.