@@ -247,6 +247,7 @@
 					data.type = 'iframe';
 					src = 'http://www.youtube.com/embed/' + src.match(/v=([^&]+)/)[1];
 					setVal('src', src);
+					setVal('media_type', data.type);
 				}
 
 				// Google video
@@ -256,6 +257,7 @@
 					data.type = 'flash';
 					src = 'http://video.google.com/googleplayer.swf?docId=' + src.match(/docid=([^&]+)/)[1] + '&hl=en';
 					setVal('src', src);
+					setVal('media_type', data.type);
 				}
 
 				if (data.type == 'video') {
@@ -285,6 +287,9 @@
 		},
 
 		formToData : function(field) {
+			if (field == "width" || field == "height")
+				this.changeSize(field);
+
 			if (field == 'source') {
 				this.moveStates(false, field);
 				setVal('source', this.editor.plugins.media.dataToHtml(this.data));
@@ -301,6 +306,11 @@
 			}
 		},
 
+		beforeResize : function() {
+			this.width = parseInt(getVal('width') || "320", 10);
+			this.height = parseInt(getVal('height') || "240", 10);
+		},
+
 		changeSize : function(type) {
 			var width, height, scale, size;
 
@@ -308,13 +318,14 @@
 				width = parseInt(getVal('width') || "320", 10);
 				height = parseInt(getVal('height') || "240", 10);
 
-				if (type == 'width')
-					setVal('height', Math.round((width / this.data.width) * width));
-				else
-					setVal('width', Math.round((height / this.data.height) * height));
+				if (type == 'width') {
+					this.height = Math.round((width / this.width) * height);
+					setVal('height', this.height);
+				} else {
+					this.width = Math.round((height / this.height) * width);
+					setVal('width', this.width);
+				}
 			}
-
-			this.formToData();
 		},
 
 		getMediaListHTML : function() {
