@@ -29,6 +29,7 @@ Version 3.4.1 (2011-xx-x)
 	Fixed bug where selecting the whole table would enable table tools for cells and rows.
 	Fixed bug where it wasn't possible to replace selected contents on IE when pasting using the paste plugin.
 	Fixed bug where setting text color in fullpage plugin doesn't work.
+	Fixed bug where the state of checkboxes in media plugin wouldn't be set correctly.
 Version 3.4 (2011-03-10)
 	Added accessibility example with various accessibility options contributed by Ephox.
 	Fixed bug where attributes wasn't properly handled in the xhtmlxtras plugin.
